CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4m
------------
* Fixed a bug in Halloween which would cause your party to duplicate

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4l
------------
* Added Halloween content. You can access it either by playing during the time period 14 oct-14 nov, or by enabling debug
 - Go to the Nomad camp between 8-22 and you should get a one-time scene to start things off
 - After the one-time, the option "Pumpkin Pie" should be available to you between 17-22. The option is only available during the season or in debug
 - Each "playthrough" resets the event state, so you can test out multiple paths
* Fixed a bug regarding companions in Lei's task
* Layla has a new sex scene written by QB/LD. You need a cock/toy to trigger it
* Restructured the "Entity" class and split it up into multiple files. This shouldn't cause wierdness, but report if it does

Version 0.4k
------------
* Asche's magic box now counts toward purchases for tasks
* Added quest log entries for Vaughn's second and third task
* Added Lei's first task + reward (you need to have talked to him about bodyguarding and offered first to get the sexy reward)
* Added a sparring option to Lei. He's quite tough
* Did some body format restructuring, making the code more structured
* Fixed a bug which would remove your naga body on loading a save
* Sparring against Miranda actually gives you a slight xp boost now

Version 0.4j
------------
* Fixed a whole lot of bugs in Kiai
* Fixed a bunch of typos in Kiai, intro Imps. Thanks CalmKhaos!
* Restructured a whole lot of old intro code. Poke me if anything looks strange (broken parser refs etc)
* Fixed a bug that would lock out strapon action for Kiai