@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4m
 ------------
 * Fixed a bug in Halloween which would cause your party to duplicate
+* Belly size description, according to pregnancy
 
 --------------------------------------------
              PREVIOUS VERSIONS
